--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,6 +46,12 @@ jobs:
         with:
           python-version: '3.8'
 
+      - name: Setup dependencies
+        run: |
+          sudo apt-get install xvfb
+
       - name: Test
         run: |
+          export DISPLAY=:99
+          Xvfb -ac :99 -screen 0 1280x1024x16 > /dev/null 2>&1 &
           python3 -c "import darkdetect; print(darkdetect.theme())"
