--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,12 +41,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
+      - name: Setup dependencies
+        run: |
+          sudo apt-get install libgtk-3-dev xvfb python3.8
 
       - name: Test
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          run: python3 -c "import darkdetect; print(darkdetect.theme())"
+        run: |
+          export DISPLAY=:99
+          Xvfb -ac :99 -screen 0 1280x1024x16 > /dev/null 2>&1 &
+          python -c "import darkdetect; print(darkdetect.theme())"
