--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,5 +43,8 @@ include-package-data = true
 [tool.setuptools.dynamic.version]
 attr = "darkdetect.__version__"
 
+[tool.setuptools.packages.find]
+namespaces = false
+
 [tool.distutils.bdist_wheel]
 universal = true
